# VersionControl

./: CMakeLists.txt  Common.cmake  LICENSE  README.md  version.h
src/: CMakeLists.txt  main.cpp  versionfilewriter.cpp  versionfilewriter.h  versionheaderwriter.cpp  versionheaderwriter.h  versionreader.cpp  versionreader.h  versionwriter.cpp  versionwriter.h
src/cli/: CMakeLists.txt  versionfilereader.cpp  versionfilereader.h  versionheaderreader.cpp  versionheaderreader.h
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
