PROJECT("VersionControl")

include(Common.cmake)

cmake_minimum_required(VERSION 2.6)

#SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "")
SET(CPACK_PACKAGE_VENDOR "BSS")
#SET(CPACK_PACKAGE_DESCRIPTION_FILE "${PROJECT_DEV_DIR}/Readme.txt")
#SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_DEV_DIR}/Copyright.txt")
SET(CPACK_PACKAGE_VERSION "${VERSION}")
SET(CPACK_PACKAGE_VERSION_MAJOR "${VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${VERSION_PATCH}")
SET(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
SET(CPACK_GENERATOR "TGZ;ZIP")
if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
SET(CPACK_GENERATOR "${CPACK_GENERATOR};NSIS")
endif()
SET(CPACK_SOURCE_GENERATOR "TGZ;ZIP")
SET(CPACK_IGNORE_FILES "/_CPack_Packages/;/CMakeFiles/;/build/;/CVS/;\\\\.zip$;\\\\.tar.gz$;\\\\.exe$;/\\\\.svn/;\\\\.swp$;\\\\.#;/#")
SET(CPACK_SOURCE_IGNORE_FILES "/_CPack_Packages/;/CMakeFiles/;/build/;/CVS/;\\\\.zip$;\\\\.tar.gz$;\\\\.exe$;/\\\\.svn/;\\\\.swp$;\\\\.#;/#")
SET(CPACK_TOPLEVEL_TAG "Packages")
SET(CPACK_PACKAGE_FILE_NAME "VersionControl-${CMAKE_SYSTEM_NAME}-${VERSION}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "VersionControl-${VERSION}-src")

INCLUDE(CPack)

# Don't use QtGui
set(QT_DONT_USE_QTGUI 1)
# SET( QT_USE_QTGUI TRUE )
SET( QT_USE_QTTEST TRUE )
#SET( QT_USE_QTSQL TRUE )
#SET( QT_USE_QTNETWORK TRUE )
find_package(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )

add_subdirectory(src)

